--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
   display: none;
 }
 
-.container .content .item {
+/* .container .content .item {
   background-color: white;
   display: none;
 }
@@ -26,7 +26,7 @@
 .container .content .item:nth-child(8),
 .container .content .item:nth-child(9) {
   display: block;
-}
+} */
 
 .show-less {
   display: none;
